--- a/src/app/menu/[slug]/menu-public.module.css
+++ b/src/app/menu/[slug]/menu-public.module.css
@@ -353,7 +353,7 @@
 /* Footer */
 .footer {
     text-align: center;
-    padding: 3rem;
+    padding: 3rem 1.5rem 6rem 1.5rem;
     color: #aaa;
     font-size: 0.9rem;
 }
