--- a/src/app/dashboard/premium-dashboard.module.css
+++ b/src/app/dashboard/premium-dashboard.module.css
@@ -407,3 +407,16 @@
         font-size: 0.8rem;
     }
 }
+
+/* Hide spin buttons for number inputs */
+/* Chrome, Safari, Edge, Opera */
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.input[type=number] {
+  -moz-appearance: textfield;
+}
