--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -438,6 +438,7 @@
   padding-left: 2rem;
   position: relative;
   color: var(--color-text-main);
+  font-weight: 700;
 }
 
 .planFeatures li::before {
